# Lesson1

./: CMakeLists.txt
src/: camera.h  main.cpp  mesh.h  mesh_h.h  model.h  window.h
src/shaders/: cursor.fs
